testsuite/tests/partial-sigs/should_fail/WildcardInDefault.stderr

WildcardInDefault.hs:4:10: error: [GHC-65507]
    • Wildcard ‘_’ not allowed
    • In a `default' declaration
